# GPU_reynolds

./: .gitignore  JFO_FORCE_INTEGRAL_AUDIT.md  README.md  STAGE_I_SOLVER_NOTE.md  diagnostic_t2_t3_pressure_profile.py  pyproject.toml
gpu_reynolds/: __init__.py  benchmark.py  kernels.py  solver.py  solver_dynamic.py  test_validation.py  utils.py
reynolds_solver/: __init__.py  api.py  benchmark.py  benchmark_squeeze.py  diag_pt_sweep.py  diagnostic_ausas_seam.py  diagnostic_jfo_splitting.py  kernels.py  kernels_ausas.py  pipeline_gpu.py  solver.py  solver_dynamic.py  solver_jfo.py  solver_jfo_ausas.py  solver_jfo_ausas_cpu.py  solver_jfo_splitting_cpu.py  solver_jfo_unified_cpu.py  solver_piezoviscous.py  solver_transformed.py  test_jfo.py  test_jfo_ausas.py  test_jfo_diagnostic.py  test_jfo_stability.py  test_jfo_unified.py  test_piezoviscous.py  test_squeeze.py  test_subcell.py  test_turbulence.py  test_validation.py  utils.py
reynolds_solver/assembly/: __init__.py  sparse_builder.py
reynolds_solver/cavitation/: __init__.py
reynolds_solver/dynamic/: __init__.py  squeeze.py
reynolds_solver/experiments/: __init__.py  elrod_manser_t2_t3.py
reynolds_solver/linear_solvers/: __init__.py  amg_solver.py  base.py  gpu_krylov.py  gpu_sor.py
reynolds_solver/nonlinear/: __init__.py  cavitation.py
reynolds_solver/physics/: __init__.py  base.py  closures.py  standard.py  standard_dynamic.py
reynolds_solver/piezoviscous/: __init__.py  solver_piezoviscous.py  solver_pv_ausas_dynamic.py  (+2 more)
scripts/: diagnose_ausas_one_step_grid.py  replay_ausas_one_step_dump.py
(+69 files in other folders)
